# tasty-html

./: .ghci  .gitignore  .gitmodules  .travis.yml  AUTHORS  CHANGELOG.md  LICENSE  README.md  stack.yaml  tasty-html.cabal
Test/Tasty/Runners/: Html.hs
data/: bootstrap-combined.min.css  bootstrap-tree.js  script.js  style.css  tasty.css
examples/: fail.hs  pass.hs  test.hs
